--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ h2 {
   padding: 30px;
   width: 90%;
   max-width: 450px;
-  position: relative;
+  position: center;
   padding: 0px;
   -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
