--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,11 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  height: 100vh;
+  height: 150vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
@@ -32,22 +36,16 @@ h2 {
 .wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column;
   justify-content: center;
-  width: 100%;
-  min-height: 100%;
-  padding: 20px;
+  height: 100vh;
 }
 
 #formContent {
-  -webkit-border-radius: 10px 10px 10px 10px;
-  border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
   background: #fff;
   padding: 30px;
-  width: 90%;
   max-width: 450px;
-  position: center;
-  padding: 0px;
   -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   text-align: center;
