--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<app-main-header></app-main-header>
+<app-main-sidebar></app-main-sidebar>
+<app-control-sidebar></app-control-sidebar>
 <router-outlet></router-outlet>
 
