update main sidebar

--- a/src/app/main-sidebar/main-sidebar.component.html
+++ b/src/app/main-sidebar/main-sidebar.component.html
@@ -26,20 +26,58 @@
           <a href="pages/widgets.html" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
-              Widgets
+              Dashboard
             </p>
           </a>
         </li>
+
+
+        <br>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-columns"></i>
+            <p>
+              Working Hours
+              <i class="fas fa-angle-left right"></i>
+            </p>
+          </a>
+
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a href="pages/layout/top-nav.html" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Board</p>
+              </a>
+
+              <li class="nav-item">
+                <a href="pages/layout/top-nav.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Ticket</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="pages/layout/top-nav.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Project</p>
+                </a>
+              </li>
+
+          </ul>
+        </li>
+
+        <br>
+
 
         <li class="nav-item">
           <a href="pages/widgets.html" class="nav-link">
-            <i class="nav-icon fas fa-th"></i>
+            <i class="nav-icon far fa-calendar-alt"></i>
             <p>
-              Widgets
+              Vacation
             </p>
           </a>
         </li>
-
 
 
       </ul>
