--- a/src/app/working_hours/projects/edit-project/edit-project.component.html
+++ b/src/app/working_hours/projects/edit-project/edit-project.component.html
@@ -1,1 +1,54 @@
-<p>edit-project works!</p>
+<app-control-sidebar></app-control-sidebar>
+<app-main-header></app-main-header>
+<app-main-sidebar></app-main-sidebar>
+<app-main-footer></app-main-footer>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h2 class="m-0 text-dark">Projects</h2>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+
+<!-- Main content -->
+<div class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="card card-primary card-outline">
+          <div class="card-body">
+
+            <h2>Edit Project</h2><br>
+
+            <!-- form start -->
+            <form role="form" action="" method="POST">
+
+              <div class="card-body">
+                <div class="form-group">
+                  <label for="nom">Name</label>
+                  <input type="text" class="form-control" id="nom" placeholder="Enter Project name" name="name"
+                    value="">
+
+                  <span class="text-danger"></span>
+
+
+                </div>
+              </div>
+              <!-- /.card-body -->
+
+              <div class="card-footer">
+                <button type="submit" class="btn btn-primary"> Submit </button>
+              </div>
+            </form>
+
+          </div>
+        </div><!-- /.card -->
+      </div>
+    </div>
+    <!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+<!-- /.content -->
