--- a/src/app/working_hours/projects/index-project/index-project.component.html
+++ b/src/app/working_hours/projects/index-project/index-project.component.html
@@ -1,1 +1,50 @@
-<p>index-project works!</p>
+<app-control-sidebar></app-control-sidebar>
+<app-main-header></app-main-header>
+<app-main-sidebar></app-main-sidebar>
+<app-main-footer></app-main-footer>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h2 class="m-0 text-dark">Projects</h2>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+
+<!-- Main content -->
+<div class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="card card-primary card-outline">
+          <div class="card-body">
+
+            <h2>List of Projects</h2><br><br>
+
+            <a href="" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i>Add Project</a>
+
+            <table class="table table-borderd ">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Name</th>
+                  <th>Action</th>
+                </tr>
+                <thead>
+                <tbody>
+
+                  <tr>
+                    <td></td>
+                    <td></td>
+                    <td>
+                      <a href="" class="btn btn-sm btn-info">Edit</a>
+                      <a href="" class="btn btn-sm btn-danger alert-delete" data-form-id="">Delete</a>
+
+                      <form id="" action="" method="POST">
+
+                      </form>
+
+                    </td>
+                  </tr>
