--- a/src/app/working_hours/projects/index-project/index-project.component.html
+++ b/src/app/working_hours/projects/index-project/index-project.component.html
@@ -29,22 +29,31 @@
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>Name</th>
-                  <th>Action</th>
+                  <th class="tl">Name</th>
+                  <th class="tt">Action</th>
                 </tr>
-                <thead>
-                <tbody>
+              </thead>
+              <tbody>
+                Projects
 
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td>
-                      <a href="" class="btn btn-sm btn-info">Edit</a>
-                      <a href="" class="btn btn-sm btn-danger alert-delete" data-form-id="">Delete</a>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td class="tf">
+                    <a href="" class="btn btn-sm btn-info"> Edit</a>
+                    <a href="javascript:;" class="btn btn-sm btn-danger alert-delete" data-form-id="">Delete</a>
 
-                      <form id="" action="" method="POST">
+                    <form id="" action="" method="POST"></form>
+                  </td>
+                </tr>
 
-                      </form>
-
-                    </td>
-                  </tr>
+              </tbody>
+            </table>
+          </div>
+        </div><!-- /.card -->
+      </div>
+    </div>
+    <!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+<!-- /.content -->
