--- a/src/app/main-sidebar/main-sidebar.component.html
+++ b/src/app/main-sidebar/main-sidebar.component.html
@@ -9,7 +9,7 @@
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
       <div class="info">
-        <a href="#" class="d-block">User : Eya</a>
+        <a href="#" class="d-block">User: </a>
       </div>
     </div>
 
