--- a/src/app/working_hours/board/board.component.html
+++ b/src/app/working_hours/board/board.component.html
@@ -2,26 +2,31 @@
 <app-main-header></app-main-header>
 <app-main-sidebar></app-main-sidebar>
 <app-main-footer></app-main-footer>
+<h1>Kanban Board</h1>
 
-
-
-<h2 class="kan">Board</h2><br>
 <div class="kanban-board">
   <div class="kanban-column">
+    <div class="card card-primary card-outline"></div>
+    <div class="card-body"></div>
     <h2>To Do</h2>
     <ul>
-      <li> </li>
-      <li> </li>
-      <li> </li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
   </div>
   <div class="kanban-column">
+    <div class="card card-primary card-outline"></div>
+    <div class="card-body"></div>
     <h2>Doing</h2>
+
     <ul>
       <li></li>
     </ul>
   </div>
   <div class="kanban-column">
+    <div class="card card-primary card-outline"></div>
+    <div class="card-body"></div>
     <h2>Done</h2>
     <ul>
     </ul>
