--- a/src/app/working_hours/tickets/tickets.component.html
+++ b/src/app/working_hours/tickets/tickets.component.html
@@ -1,1 +1,42 @@
-<p>tickets works!</p>
+<app-control-sidebar></app-control-sidebar>
+<app-main-header></app-main-header>
+<app-main-sidebar></app-main-sidebar>
+<app-main-footer></app-main-footer>
+
+<h2 class="m-0 text-dark">Ticket</h2><br>
+<div class="content">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="card card-primary card-outline">
+          <div class="card-body">
+
+            <h2>Create Ticket</h2><br>
+
+            <!-- form start -->
+            <form role="form" action="#" method="POST">
+
+              <label for="nom-projet">Ticket Name :</label><br>
+              <input type="text" id="nom-projet" name="nom-projet" placeholder="Enter ticket name" required><br>
+
+              <label class="t" projet-selection>Existing ticket:</label><br>
+              <select id="projet-selection" name="projet-selection">
+                <option value="">Choose a ticket</option>
+                <option value="projet-a">ticket A</option>
+                <option value="projet-b">ticket B</option>
+                <option value="projet-c">ticket C</option>
+              </select>
+
+              <label class="tk" for="duree-projet">Project Duration (Hours) :</label><br>
+              <input type="number" id="duree-projet" name="duree-projet" placeholder="ticket duration" required>
+
+              <label class="tp" for="duree-projet">Date :</label>
+              <input type="date" id="duree-projet" name="duree-projet" required><br>
+
+              <div class="card-footer">
+                <button type="submit" class="btn btn-primary"> Submit </button>
+              </div>
+
+
+            </form>
