--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,7 @@
           <mat-error *ngIf="loginForm.get('password')?.hasError('required')">This Input Is Required!</mat-error>
         </mat-form-field>
 
-        <button mat-raised-button color="primary">login</button>
+        <button mat-raised-button color="primary" (click)="login()" [disabled]="loginForm.invalid" >login</button>
       </form>
     </div>
   </div>
