--- a/src/app/main-sidebar/main-sidebar.component.html
+++ b/src/app/main-sidebar/main-sidebar.component.html
@@ -45,20 +45,20 @@
 
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a href="pages/layout/top-nav.html" class="nav-link">
+              <a routerLink="/board" routerLinkActive="active" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Board</p>
               </a>
 
             <li class="nav-item">
-              <a href="pages/layout/top-nav.html" class="nav-link">
+              <a routerLink="/tickets" routerLinkActive="active" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Ticket</p>
               </a>
             </li>
 
             <li class="nav-item">
-              <a href="pages/layout/top-nav.html" class="nav-link">
+              <a routerLink="/index_project" routerLinkActive="active" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Project</p>
               </a>
