--- a/src/app/working_hours/projects/index-project/index-project.component.html
+++ b/src/app/working_hours/projects/index-project/index-project.component.html
@@ -23,7 +23,7 @@
 
             <h2>List of Projects</h2><br><br>
 
-            <a href="" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i>Add Project</a>
+            <a routerLink="/create_project" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i>Add Project</a>
 
             <table class="table table-borderd ">
               <thead>
@@ -40,7 +40,7 @@
                   <td></td>
                   <td></td>
                   <td class="tf">
-                    <a href="" class="btn btn-sm btn-info"> Edit</a>
+                    <a routerLink="/edit_project" class="btn btn-sm btn-info"> Edit</a>
                     <a href="javascript:;" class="btn btn-sm btn-danger alert-delete" data-form-id="">Delete</a>
 
                     <form id="" action="" method="POST"></form>
