--- a/src/app/working_hours/tickets/edit-ticket/edit-ticket.component.html
+++ b/src/app/working_hours/tickets/edit-ticket/edit-ticket.component.html
@@ -1,1 +1,71 @@
-<p>edit-ticket works!</p>
+<app-control-sidebar></app-control-sidebar>
+<app-main-header></app-main-header>
+<app-main-sidebar></app-main-sidebar>
+<app-main-footer></app-main-footer>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h2 class="m-0 text-dark">Tickets </h2>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+
+<!-- Main content -->
+<div class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="card card-primary card-outline">
+          <div class="card-body">
+
+            <h2>Edit Ticket</h2><br>
+
+            <!-- form start -->
+            <form role="form" action="#" method="POST">
+
+              <div class="card-body">
+                <div class="form-group">
+                  <label for="nom">Ticket Name :</label><br>
+                  <input type="text" class="form-control" id="nom" placeholder="Enter ticket name" name="name">
+                  <span class="text-danger"></span>
+                </div>
+
+
+
+                <label for="nom">Existing Ticket:</label>
+                <select id="projet-selection" name="projet-selection" class="form-control">
+                  <option value="">Choose a ticket</option>
+                  <option value="projet-a">ticket A</option>
+                  <option value="projet-b">ticket B</option>
+                  <option value="projet-c">ticket C</option>
+                </select>
+
+
+
+                <div class="form-group">
+                  <label class="tk" for="duree-projet">Project Duration (Hours) :</label>
+                  <input type="number" id="duree-projet" name="duree-projet" placeholder="ticket duration"
+                    class="form-control" required>
+                </div>
+
+
+                <label class="tp" for="duree-projet">Date :</label>
+                <input type="date" id="duree-projet" name="duree-projet" class="form-control" required><br>
+
+                <div class="card-footer">
+                  <button type="submit" class="btn btn-primary"> Submit </button>
+                </div>
+              </div>
+            </form>
+
+          </div>
+        </div><!-- /.card -->
+      </div>
+    </div>
+    <!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+<!-- /.content -->
