--- a/src/app/vacation/index-vacation/index-vacation.component.html
+++ b/src/app/vacation/index-vacation/index-vacation.component.html
@@ -1,1 +1,59 @@
-<p>index-vacation works!</p>
+<app-control-sidebar></app-control-sidebar>
+<app-main-header></app-main-header>
+<app-main-sidebar></app-main-sidebar>
+<app-main-footer></app-main-footer>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h2 class="m-0 text-dark">Vacations</h2>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+
+<!-- Main content -->
+<div class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="card card-primary card-outline">
+          <div class="card-body">
+
+            <h2>List of Vacations</h2><br><br>
+
+            <a routerLink="/create_project" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i>Add Vacation</a>
+
+            <table class="table table-borderd ">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th class="tl">Name</th>
+                  <th class="tt">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+
+
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td class="tf">
+                    <a routerLink="/edit_project" class="btn btn-sm btn-info"> Edit</a>
+                    <a href="javascript:;" class="btn btn-sm btn-danger alert-delete" data-form-id="">Delete</a>
+
+                    <form id="" action="" method="POST"></form>
+                  </td>
+                </tr>
+
+              </tbody>
+            </table>
+          </div>
+        </div><!-- /.card -->
+      </div>
+    </div>
+    <!-- /.row -->
+  </div><!-- /.container-fluid -->
+</div>
+<!-- /.content -->
