--- a/src/app/working_hours/tickets/create-ticket/create-ticket.component.html
+++ b/src/app/working_hours/tickets/create-ticket/create-ticket.component.html
@@ -27,8 +27,8 @@
 
 
                 <label for="nom">Existing ticket:</label>
-                <select id="projet-selection" name="projet-selection">
-                  <option value="">Choose a ticket</option>
+                <select id="projet-selection" name="projet-selection" class="form-control">
+                  <option value="">Select a ticket</option>
                   <option value="projet-a">ticket A</option>
                   <option value="projet-b">ticket B</option>
                   <option value="projet-c">ticket C</option>
@@ -38,12 +38,13 @@
 
                 <div class="form-group">
                   <label class="tk" for="duree-projet">Project Duration (Hours) :</label>
-                  <input type="number" id="duree-projet" name="duree-projet" placeholder="ticket duration" required>
+                  <input type="number" id="duree-projet" name="duree-projet" placeholder="ticket duration"
+                    class="form-control" required>
                 </div>
 
 
                 <label class="tp" for="duree-projet">Date :</label>
-                <input type="date" id="duree-projet" name="duree-projet" required><br>
+                <input type="date" id="duree-projet" name="duree-projet" class="form-control" required><br>
 
                 <div class="card-footer">
                   <button type="submit" class="btn btn-primary"> Submit </button>
