--- a/src/app/modules/admin/admin-components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/admin-components/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>dashboard works!</p>
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+          <h1>Welcome to The Admin Dashboard</h1>
+      </div>
+    </div>
+  </div>
+</div>
