--- a/src/app/working_hours/projects/index-project/index-project.component.css
+++ b/src/app/working_hours/projects/index-project/index-project.component.css
@@ -1,57 +1,29 @@
-.sidebar {
-  float: left;
-  /* Make the sidebar float to the left */
-  width: 200px;
-  /* Set the sidebar's width */
+
+
+h1 {
+  text-align: center;
 }
 
-/* Target the table element */
-.content-header {
-  margin-left: 292px;
+
+label {
+  display: block;
+  margin-bottom: 10px;
 
 }
 
-.content {
-  margin-left: 300px;
+
+select {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
 
-.row {
-  width: 1500px;
-  height: 50px;
-}
+
 
 h2.m-0 {
   font-size: 40px;
-}
 
-h2 {
-  font-size: 25px;
-  height: 20px;
-}
-
-.card-footer {
-  background-color: transparent;
-  height: 70px;
 }
 
 
-.btn.btn-sm.btn-info {
-  background-color: rgb(7, 187, 7);
-  margin-right: 10px;
-}
-
-.btn.btn-sm.btn-danger.alert-delete {
-  background-color: rgb(216, 7, 7);
-}
-
-.tt {
-  padding-left: 300px;
-}
-
-.tf {
-  padding-left: 300px;
-}
-
-.tl {
-  padding-left: 300px;
-}
