--- a/src/app/modules/admin/admin-components/all-employees/all-employees.component.html
+++ b/src/app/modules/admin/admin-components/all-employees/all-employees.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h2 class="m-0 text-dark">Projects</h2>
+        <h2 class="m-0 text-dark">Employees</h2>
       </div><!-- /.content -->
     </div><!-- /.col -->
     </div><!-- /.row -->
@@ -16,24 +16,30 @@
       <div class="col-lg-12">
         <div class="card card-primary card-outline">
           <div class="card-body">
-            <h2>List of projects</h2>
-            <a routerLink="/admin/add_employee"  class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Project</a>
+            <h2>List of Employees</h2>
+            <a routerLink="/admin/add_employee"  class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Employee</a>
             <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>#</th>
-                  <th class="tl">Name</th>
+                  <th class="tl">Email </th>
+                  <th class="tl">Full Name</th>
+                  <th class="tl">Gender</th>
+                  <th class="tl">Date Of Birth</th>
                   <th class="">Action</th>
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let project of projects; let i = index">
+                <tr *ngFor="let employee of employees; let i = index">
                   <td>{{ i + 1 }}</td>
-                  <td></td>
+                  <td>{{ employee.email }}</td>
+                  <td>{{ employee.name }}</td>
+                  <td>{{ employee.gender }}</td>
+                  <td>{{ employee.dob | date: 'd,MMM,y' }}</td>
 
                   <td>
-                    <a class="btn btn-sm btn-info">Edit</a>
-                    <a class="btn btn-sm btn-danger alert-delete">Delete</a>
+                    <a class="btn btn-sm btn-info" routerLink="/admin/add_employee/{{employee.id}}">Edit</a>
+                    <a class="btn btn-sm btn-danger alert-delete" (click)="deleteEmployee(employee.id)">Delete</a>
                     <form id="" method="POST">
                     </form>
                   </td>
