--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,7 +117,7 @@
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
         <div class="info">
-          <a href="#" class="d-block">{{ employeeName }}</a>
+          <p class="d-block"> Welcome {{ this.employeeName}}</p>
         </div>
       </div>
 
@@ -165,7 +165,7 @@
               </li>
 
               <li class="nav-item">
-                <a routerLink="/employee/create_project" routerLinkActive="active" class="nav-link">
+                <a routerLink="/employee/all_projects" routerLinkActive="active" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Project</p>
                 </a>
