--- a/src/app/modules/admin/admin-components/post-employee/post-employee.component.html
+++ b/src/app/modules/admin/admin-components/post-employee/post-employee.component.html
@@ -25,8 +25,6 @@
                               <span *ngIf="validateFrom.get('email').hasError('email')" class="text-danger">Please enter a valid email address.</span>
                           </span>
 
-
-
                         </div>
 
                         <div class="form-group">
@@ -70,7 +68,8 @@
                         </div>
 
                         <div class="card-footer">
-                          <button type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid" (click)="postEmployee()">Submit</button>
+                          <button style='margin-right:16px' type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid" (click)="postEmployee()">Submit</button>
+                          <button style='margin-right:16px' class="btn btn-danger" routerLink="/admin/all_employees">Cancel</button>
                         </div>
                       </div>
                     </form>
