--- a/src/app/modules/employee/employee-components/get-all-projects/get-all-projects.component.html
+++ b/src/app/modules/employee/employee-components/get-all-projects/get-all-projects.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h2 class="m-0 text-dark">Employees</h2>
+        <h2 class="m-0 text-dark">Projects</h2>
       </div><!-- /.content -->
     </div><!-- /.col -->
     </div><!-- /.row -->
@@ -13,33 +13,27 @@
 <div class="content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-6">
         <div class="card card-primary card-outline">
           <div class="card-body">
-            <h2>List of Employees</h2>
-            <a routerLink="/admin/add_employee"  class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Employee</a>
+            <h2>List of Projects</h2>
+            <a routerLink="/employee/create_project"  class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Project</a>
             <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>#</th>
-                  <th class="tl">Email </th>
-                  <th class="tl">Full Name</th>
-                  <th class="tl">Gender</th>
-                  <th class="tl">Date Of Birth</th>
+                  <th class="tl">Name </th>
                   <th class="">Action</th>
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let employee of employees; let i = index">
+                <tr *ngFor="let project of projects; let i = index">
                   <td>{{ i + 1 }}</td>
-                  <td>{{ employee.email }}</td>
-                  <td>{{ employee.name }}</td>
-                  <td>{{ employee.gender }}</td>
-                  <td>{{ employee.dob | date: 'd,MMM,y' }}</td>
-
+                  <td>{{ project.name }}</td>
                   <td>
-                    <a style='margin-right:16px' class="btn btn-sm btn-info fas fa-edit" routerLink="/admin/add_employee/{{employee.id}}">Edit</a>
-                    <a style='margin-right:16px' class="btn btn-sm btn-danger alert-delete" (click)="deleteEmployee(employee.id)">Delete</a>
+                    <a style='margin-right:16px' class="btn btn-sm btn-info fas fa-edit" [routerLink]="['/employee/create_project', project.id]" >Edit</a>
+                    <a style='margin-right:16px' class="btn btn-sm btn-danger alert-delete" (click)="deleteProject(project.id)">Delete</a>
+
                     <form id="" method="POST">
                     </form>
                   </td>
@@ -51,6 +45,7 @@
       </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
   </div><!-- /.container-fluid -->
+
 
 
 
