--- a/src/app/modules/employee/employee-components/update-project/update-project.component.html
+++ b/src/app/modules/employee/employee-components/update-project/update-project.component.html
@@ -11,7 +11,7 @@
               <div class="col-lg-12">
                 <div class="card card-primary card-outline">
                   <div class="card-body">
-                    <h2>Create Project</h2><br>
+                    <h2>Edit Project</h2><br>
 
                     <form [formGroup]="validateFrom">
                       <div class="card-body">
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="card-footer">
-                          <button style='margin-right:16px' type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid" (click)="applyProject()">Submit</button>
+                          <button style='margin-right:16px' type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid" >Submit</button>
                           <button style='margin-right:16px' class="btn btn-danger" routerLink="/employee/all_projects">Cancel</button>
                         </div>
                       </div>
