--- a/src/app/modules/admin/admin-components/update-employee/update-employee.component.html
+++ b/src/app/modules/admin/admin-components/update-employee/update-employee.component.html
@@ -11,7 +11,7 @@
               <div class="col-lg-12">
                 <div class="card card-primary card-outline">
                   <div class="card-body">
-                    <h2>Edit Employee</h2><br>
+                    <h2>Edit Employee</h2>
 
                     <form [formGroup]="validateFrom">
                       <div class="card-body">
