--- a/src/app/modules/employee/employee-components/apply-project/apply-project.component.html
+++ b/src/app/modules/employee/employee-components/apply-project/apply-project.component.html
@@ -11,7 +11,7 @@
               <div class="col-lg-12">
                 <div class="card card-primary card-outline">
                   <div class="card-body">
-                    <h2>Create Project</h2><br>
+                    <h2>Create Project</h2>
 
                     <form [formGroup]="validateFrom">
                       <div class="card-body">
