--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,7 +177,7 @@
           <br>
 
           <li class="nav-item">
-            <a  class="nav-link">
+            <a  class="nav-link" routerLink="/employee/vacation" routerLinkActive="active">
               <i class="nav-icon far fa-calendar-alt"></i>
               <p>
                 Vacation
