--- a/src/app/modules/employee/employee-components/apply-vacation/apply-vacation.component.html
+++ b/src/app/modules/employee/employee-components/apply-vacation/apply-vacation.component.html
@@ -40,7 +40,7 @@
                         </div>
 
                         <div class="card-footer">
-                          <button style='margin-right:16px' type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid">Submit</button>
+                          <button style='margin-right:16px' type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid" (click)="applyVacation()">Submit</button>
                           <button style='margin-right:16px' class="btn btn-danger" routerLink="/admin/all_employees">Cancel</button>
                         </div>
                       </div>
